--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "1.9.5",
     "next": "latest",
     "react": "18.2.0",
