--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.5.3",
     "react-redux": "8.1.0"
   },
   "devDependencies": {
